Added statement in package.json to add tmp/public/js folder during spin-up.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "styles:seldon": "node-sass --output-style compressed -o .tmp/public/css source/assets/scss/seldon.scss",
     "styles:views": "node-sass --output-style compressed -o .tmp/public/css/views source/assets/scss/views",
     "babel": "babel source/assets/js --out-dir .tmp/public/js --copy-files",
-    "uglify": "node scripts/uglify.js 'source/assets/js' '.tmp/public/js'",
+    "uglify": "npm run uglify:dir && node scripts/uglify.js 'source/assets/js' '.tmp/public/js'",
+    "uglify:dir": "mkdir -p .tmp/public/js",
     "images": "npm run images:img & npm run images:icons",
     "images:img": "mkdir -p .tmp/public/img && cp -r source/assets/img/* .tmp/public/img",
     "images:icons": "mkdir -p .tmp/public/icons && cp -r source/assets/icons/* .tmp/public/icons",
