Hid old integration page; set page nav order via `collectionOrder`; fade in Datica logomark in subnav. Useful other places too.

--- a/data/views/platform.yaml
+++ b/data/views/platform.yaml
@@ -31,10 +31,10 @@ tier_points_paired:
             Customers prefer this option when full control over AWS or Azure accounts matters most, while still receiving the same compliance assurances from the Platform.
     -
         - |
-            ### This Model Works Great For...
+            ### The Hosted Model Works Great For...
             {: .headline-4}
         - |
-            ### This Model Works Great For...
+            ### The Licensed Model Works Great For...
             {: .headline-4}
     -
         - |
