Trying a different toml redirect setting. This exact case isn't spelled out in the docs. First try didn't work. minor content edits

--- a/netlify.toml
+++ b/netlify.toml
@@ -17,5 +17,5 @@
 
 # Basic redirect rules
 redirects = [
-   {from = "/*", to = "/404/", status = 404, force = false},
-   {from = "/platform/integration", to = "/discover/ehr-integrations", status = 404, force = false}]
+   {from = "/platform/integration", to = "/discover/ehr-integrations"},
+   {from = "/*", to = "/404/index.html", status = 404}]
