Feature category listings now use custom `sort_order`. Experimenting with feature "detail drawer" off-canvas descriptions (it's not there yet). Still working with toml redirects.

--- a/netlify.toml
+++ b/netlify.toml
@@ -17,5 +17,6 @@
 
 # Basic redirect rules
 redirects = [
-   {from = "/platform/integration", to = "/discover/ehr-integrations"},
-   {from = "/*", to = "/404/index.html", status = 404, force = true}]
+  {from = "/platform/integration", to = "/discover/ehr-integrations"},
+  {from = "/foo", to = "/discover/ehr-integrations"},
+  {from = "/*", to = "/404/index.html", status = 404}]
