working on sensible toggle component attempt on toml settings from support

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,10 @@
+[Settings]
+  ID = "3bbf38ec-f306-4e70-9223-dff0e4c980d3"
+  Path = ""
+
+[context.build]
+  publish = ""
+
 [[headers]]
   for = "/*"
   [headers.values]
@@ -7,13 +14,6 @@
     X-XSS-Protection = "1; mode=block"
     strict-transport-security = "max-age=31536000; includeSubDomains"
     # Content-Security-Policy-Report-Only = "default-src https: 'unsafe-inline' 'unsafe-eval'"
-
-[Settings]
-  ID = "3bbf38ec-f306-4e70-9223-dff0e4c980d3"
-  Path = ""
-
-[Build]
-  Publish = ""
 
 # Basic redirect rules
 redirects = [
