--- a/data/footer_main.yaml
+++ b/data/footer_main.yaml
@@ -13,7 +13,7 @@
             desc: "The technology support and capabilities of the Datica platform"
         -
             title: "Data Integration"
-            url: "/platform/integration"
+            url: "/platform/technology/#tech-integration"
             desc: "The full-stack integration toolset for developers"
         -
             title: "Compliance Story"
