--- a/data/footer_main.yaml
+++ b/data/footer_main.yaml
@@ -144,3 +144,7 @@
             title: "HIPAA Mappings"
             url: "https://hipaa.datica.com"
             desc: "How we map to HIPAA's rules"
+        -
+            title: "Datica Privacy Policy"
+            url: "https://privacy.datica.com/"
+            desc: "This Privacy Statement describes Datica’s Web site privacy practices."
