Updating nav header

--- a/data/footer_main.yaml
+++ b/data/footer_main.yaml
@@ -103,14 +103,14 @@
             url: "https://hl7.datica.com"
             desc: "Experiment with the HL7 API for free"
 -
-    title: "Customers"
+    title: "Help"
     url:
     desc:
     children:
         -
-            title: "Login"
+            title: "Sign in"
             url: "https://product.datica.com"
-            desc: "Log into your dashboard"
+            desc: "Sign in to your dashboard"
         -
             title: "Documentation"
             url: "https://help.datica.com"
