--- a/data/nav_combo.yaml
+++ b/data/nav_combo.yaml
@@ -94,14 +94,10 @@ nav_primary:
                 url: "https://hl7.datica.com"
                 desc: "Experiment with the HL7 API for free"
     -
-        title: "Customers"
+        title: "Help"
         url:
         desc:
         children:
-            -
-                title: "Login"
-                url: "https://product.datica.com"
-                desc: "Log into your dashboard"
             -
                 title: "Documentation"
                 url: "https://help.datica.com"
