--- a/data/footer_main.yaml
+++ b/data/footer_main.yaml
@@ -117,7 +117,7 @@
             desc: "Documentation across all Datica products"
         -
             title: "Support"
-            url: "https://datica.zendesk.com/hc/en-us"
+            url: "https://help.datica.com"
             desc: "Support for Datica customers"
         -
             title: "System Status"
